syntax = "proto3";

option go_package = "github.com/fsufitch/tagioalisi-bot/proto";
package tagioalisi;

import "base.proto";

message SendMessageRequest {
    string jwt = 1;
    string channelID = 2;
    string content = 3;

}
  
message SendMessageReply {
    UnaryStatus status = 1;
}
  
service Sockpuppet {
    rpc SendMessage (SendMessageRequest) returns (SendMessageReply) {}
}
  